将Type=oneshot修改为Type=simple，以正确通过 Systemd 管理常驻脚本（来自Copilot）

--- a/conf/connmonitor.service
+++ b/conf/connmonitor.service
@@ -2,7 +2,7 @@
 Description=Monitor PEPSal connections limits and manage nftables rules on its behalf
 
 [Service]
-Type=oneshot
+Type=simple
 ExecStart=/bin/bash connmonitor.sh "meta l4proto tcp ct count"
 
 [Install]
